--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -2,7 +2,39 @@
 
 .header {
   width: 100%;
-  height: 60px;
   background-color: $mantle;
   border-bottom: 1px solid $surface0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px;
+  box-sizing: border-box;
+  gap: 8px;
+}
+
+.search {
+  flex: 1;
+  outline: none;
+  border: 1px solid transparent;
+  background-color: $base;
+  border-radius: 5px;
+  padding: 8px;
+  color: $text;
+  font-size: 14px;
+  margin-left: 2px;
+  transition: border 0.1s;
+
+  &::placeholder {
+    color: $subtext1;
+  }
+
+  &:focus {
+    border: 1px solid $mauve;
+  }
+}
+
+.separator {
+  width: 1px;
+  height: 28px;
+  background-color: $surface0;
 }
