--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -24,7 +24,7 @@
     gap: 8px;
   }
 
-  &:not(.expanded) {
+  &.expanded {
     max-height: 100%;
     padding: 12px 16px;
     border-top-width: 1px;
