--- a/src/components/settings.module.scss
+++ b/src/components/settings.module.scss
@@ -19,9 +19,52 @@
     transform: scale(1);
     pointer-events: all;
     opacity: 1;
-    transition: all 0.2s cubic-bezier(0, 1.3,1,1);
-
+    transition: all 0.2s cubic-bezier(0, 1.3, 1, 1);
   }
+
+  &.shake {
+    $time: 0.3s;
+    $full: calc($time * 4);
+    animation: shake $time;
+  
+    .unsaved {
+      animation: blinkBox $full ease;
+    
+      p {
+        animation: blinkText $full ease;
+      }
+
+      .reset {
+        animation: blinkText $full ease;
+      }
+    }
+  }
+}
+
+@keyframes shake {
+  0% { transform: translate(-2px, -2px); }
+  10% { transform: translate(3px, -4px); }
+  20% { transform: translate(3px, -3px); }
+  30% { transform: translate(0px, 3px); }
+  40% { transform: translate(-5px, 1px); }
+  50% { transform: translate(2px, -3px); }
+  60% { transform: translate(-1px, 0px); }
+  70% { transform: translate(-8px, 1px); }
+  80% { transform: translate(-8px, 0px); }
+  90% { transform: translate(-7px, 2px); }
+  100% { transform: translate(-4px, -6px); }
+}
+
+@keyframes blinkBox {
+  25% { background-color: darken($red, 20%); }
+  75% { background-color: darken($red, 20%); }
+  100% { background-color: $crust; }
+}
+
+@keyframes blinkText {
+  25% { color: $crust; }
+  75% { color: $crust; }
+  100% { color: $text; }
 }
 
 .tabs {
@@ -61,13 +104,161 @@
     }
 
     &:hover {
-      background-color: transparentize($text, 0.9);
+      background-color: transparentize($text, 0.875);
       color: $subtext1;
     }
 
     &:active {
       background-color: transparentize($text, 0.85);
       color: $subtext0;
+    }
+  }
+}
+
+.content {
+  padding: 3rem 3rem 0 3rem;
+  position: relative;
+
+  h1 {
+    margin: 0 0 1.5rem 0;
+    color: $text;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  .label {
+    margin: 0;
+    color: $overlay1;
+    font-size: 0.85rem;
+    font-weight: 600;
+    padding: 0 0 6px 0;
+  }
+
+  .text {
+    outline: none;
+    border: 1px solid $surface0;
+    background-color: $mantle;
+    border-radius: 4px;
+    padding: 0.5rem;
+    color: $text;
+    font-size: 0.85rem;
+    font-weight: 500;
+    width: 100%;
+    box-sizing: border-box;
+    transition: all 0.1s ease;
+
+    &::placeholder {
+      color: $overlay1;
+    }
+
+    &:focus {
+      border-color: $text;
+    }
+
+    &.error {
+      border-color: $red;
+    }
+  }
+
+  .note {
+    margin: 0.5rem 0;
+    color: $overlay1;
+    font-size: 0.75rem;
+    font-weight: 500;
+    font-style: italic;
+  }
+
+  .separator {
+    width: 100%;
+    height: 1px;
+    background-color: $surface0;
+    margin: 1.5rem 0;
+  }
+
+  .inline {
+    display: flex;
+    align-items: center;
+    margin: 2.5rem 0 0.5rem 0;
+
+    svg {
+      color: $overlay1;
+      font-size: 1.5rem;
+    }
+
+    h2 {
+      margin: 0 0.5rem 0 0.5rem;
+      color: $text;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+  }
+
+  .sublabel {
+    margin: 0.5rem 0 2.5rem 0;
+    font-size: 0.85rem;
+    font-weight: 500;
+    color: $overlay1;
+  }
+
+  .unsaved {
+    position: absolute;
+    bottom: -1.5rem;
+    transform: translateY(100%);
+    left: 2rem;
+    right: 2rem;
+    background-color: $crust;
+    padding: 0.85rem;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    transition: all 0.35s cubic-bezier(0.2, -0.35, 1, -0.35);
+
+    &.shown {
+      transition: all 0.35s cubic-bezier(0, 1.5, 0.6, 1);
+      transform: translateY(0);
+      bottom: 1.5rem;
+    }
+
+    p {
+      flex: 1;
+      margin: 0;
+      color: $text;
+      font-size: 0.95rem;
+      font-weight: 500;
+    }
+
+    .reset {
+      background-color: transparent;
+      outline: none;
+      border: none;
+      color: $text;
+      padding: 0.4rem 1rem;
+      font-size: 0.8rem;
+      font-weight: 500;
+      cursor: pointer;
+    
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    .save {
+      background-color: $mauve;
+      outline: none;
+      border: none;
+      border-radius: 4px;
+      font-size: 0.8rem;
+      font-weight: 600;
+      padding: 0.4rem 1rem;
+      cursor: pointer;
+      transition: all 0.1s ease;
+      color: $crust;
+
+      &:hover {
+        background-color: darken($mauve, 10%);
+        color: $mantle;
+      }
     }
   }
 }
@@ -109,3 +300,182 @@
     color: $text;
   }
 }
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001;
+  transition: all 0.2s ease;
+
+  &.open {
+    pointer-events: all;
+    opacity: 1;
+  
+    .modalContent {
+      opacity: 1;
+      transform: scale(1);
+      transition: all 0.25s cubic-bezier(0, 1.5, 0.6, 1);
+    }
+  }
+}
+
+.modalContent {
+  opacity: 0;
+  transform: scale(0.7);
+  background-color: $base;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  width: min(100%, 30rem);
+  overflow: hidden;
+  transition: all 0.2s ease;
+
+  .header {
+    margin: 1.5rem 1.5rem 1rem 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding-bottom: 8px;
+    border-bottom: 2px solid $surface0;
+
+    svg {
+      color: $text;
+      font-size: 1.7rem;
+    }
+
+    h1 {
+      margin: 0;
+      color: $text;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+  }
+
+  p {
+    margin: 0 1.5rem 1rem 1.5rem;
+    color: $text;
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+
+  .actions {
+    padding: 1rem;
+    background-color: $mantle;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    align-items: center;
+  
+    button {
+      background-color: transparent;
+      outline: none;
+      border: none;
+      color: $text;
+      padding: 0.5rem 1rem;
+      font-size: 0.85rem;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.1s ease;
+  
+      &.cancel {
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+  
+      &.confirm {
+        background-color: $mauve;
+        border-radius: 4px;
+        font-size: 0.85rem;
+        font-weight: 600;
+        color: $crust;
+  
+        &:hover {
+          background-color: darken($mauve, 10%);
+          color: $mantle;
+        }
+      }
+    }
+  }
+}
+
+  // .modalContent {
+  //   background-color: $base;
+  //   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  //   border-radius: 8px;
+  //   width: min(100%, 30rem);
+  //   overflow: hidden;
+  //   box-sizing: border-box;
+  //   animation: modalFadeIn 0.2s ease;
+  
+  //   h1 {
+  //     margin: 1.5rem 1.5rem 1rem 1.5rem;
+  //     color: $text;
+  //     font-size: 1.5rem;
+  //     font-weight: 600;
+  //     border-bottom: 1px solid $surface0;
+  //     padding-bottom: 1rem;
+  //     display: flex;
+  //     align-items: center;
+  //     gap: 0.5rem;
+  //   }
+
+  //   p {
+  //     margin: 0 1.5rem 1rem 1.5rem;
+  //     color: $text;
+  //     font-size: 0.9rem;
+  //     font-weight: 500;
+  //   }
+
+  //   .modalActions {
+  //     padding: 1rem;
+  //     background-color: $mantle;
+  //     display: flex;
+  //     justify-content: flex-end;
+  //     gap: 1rem;
+  //     align-items: center;
+
+  //     .cancel {
+  //       background-color: transparent;
+  //       outline: none;
+  //       border: none;
+  //       color: $text;
+  //       padding: 0.5rem 1rem;
+  //       font-size: 0.85rem;
+  //       font-weight: 500;
+  //       cursor: pointer;
+  //       transition: all 0.1s ease;
+
+  //       &:hover {
+  //         text-decoration: underline;
+  //       }
+  //     }
+
+  //     .confirm {
+  //       background-color: $mauve;
+  //       outline: none;
+  //       border: none;
+  //       border-radius: 4px;
+  //       font-size: 0.85rem;
+  //       font-weight: 600;
+  //       padding: 0.5rem 1rem;
+  //       cursor: pointer;
+  //       transition: all 0.1s ease;
+  //       color: $crust;
+
+  //       &:hover {
+  //         background-color: darken($mauve, 10%);
+  //         color: $mantle;
+  //       }
+  //     }
+  //   }
+  // }
+// }
