--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -4,12 +4,18 @@
   background-color: $mantle;
   border-top: 0px solid $surface0;
   box-sizing: border-box;
-  padding: 0;
+  padding: 0 16px;
   display: flex;
-  max-height: 0;
   overflow: hidden;
+  max-height: 0;
   gap: 16px;
-  transition: max-height 0.2s ease, padding 0.2s ease, border-top-width 0.2s ease;
+  transition: max-height 0.2s ease, padding 0.2s ease;
+
+  &.expanded {
+    max-height: 73px;
+    padding: 12px 16px;
+    border-top: 1px solid $surface0;
+  }
 
   .left {
     flex: 1;
@@ -22,12 +28,6 @@
     display: flex;
     align-items: center;
   } 
-
-  &.expanded {
-    max-height: 72px;
-    padding: 12px 16px;
-    border-top-width: 1px;
-  }
 
   .text {
     text-align: center;
