--- a/src/components/settings.module.scss
+++ b/src/components/settings.module.scss
@@ -1,5 +1,5 @@
 @import "../palette.scss";
-
+// 244
 .settings {
   position: fixed;
   top: 0;
@@ -11,7 +11,7 @@
   background-color: mix($base, $mantle, 95%);
   pointer-events: none;
   display: grid;
-  grid-template-columns: 1fr minmax(0, 45rem) 1fr;
+  grid-template-columns: minmax(244px, 1fr) 50rem minmax(44px, 1fr);
   transition: all 0.2s cubic-bezier(0, 0, 1, -0.3);
   z-index: 1000;
 
@@ -264,7 +264,7 @@
 }
 
 .close {
-  padding: 3rem 0;
+  padding: 3rem 12px 0 0;
   display: flex;
   flex-direction: column;
   width: fit-content;
