--- a/src/components/content.module.scss
+++ b/src/components/content.module.scss
@@ -3,4 +3,81 @@
 .content {
   width: 100%;
   flex-grow: 1;
+  overflow: auto;
+  position: relative;
+}
+
+.files {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  width: 100%;
+  overflow: auto;
+}
+
+.file {
+  display: contents;
+  cursor: pointer;
+
+  div {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0.5rem;
+    font-size: 1rem;
+    color: $subtext0;
+    height: fit-content;
+  }
+
+  div:first-child {
+    padding-left: 1rem;
+  }
+
+  div:last-child {
+    padding-right: 1rem;
+  }
+
+  &:nth-child(odd) > div {
+    background-color: $base;
+  }
+
+  &:nth-child(even) > div {
+    background-color: $mantle;
+  }
+}
+
+.size {
+  text-align: right;
+}
+
+.fallback {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  color: $subtext1;
+  
+  h1 {
+    font-size: 40px;
+    margin: 0;
+  }
+
+  p {
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 0 0 40px 0;
+  }
+}
+
+.overlay {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: background-color 0.2s;
+
+  &.hovering {
+    background-color: transparentize($mauve, 0.9);
+  }
 }
