--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -6,13 +6,14 @@
   box-sizing: border-box;
   padding: 0 16px;
   display: flex;
+  flex-shrink: 0;
   overflow: hidden;
-  max-height: 0;
+  height: 0;
   gap: 16px;
-  transition: max-height 0.2s ease, padding 0.2s ease;
+  transition: height 0.2s ease, padding 0.2s ease;
 
   &.expanded {
-    max-height: 73px;
+    height: 73px;
     padding: 12px 16px;
     border-top: 1px solid $surface0;
   }
