--- a/src/components/settings.module.scss
+++ b/src/components/settings.module.scss
@@ -67,6 +67,13 @@
   100% { color: $text; }
 }
 
+@keyframes blinkField {
+  0% { border-color: $surface0; }
+  5% { border-color: $red; }
+  75% { border-color: $red; }
+  100% { border-color: $surface0; }
+}
+
 .tabs {
   background-color: $mantle;
   border-right: 1px solid $surface0;
@@ -155,8 +162,8 @@
       border-color: $text;
     }
 
-    &.error {
-      border-color: $red;
+    &.blink {
+      animation: blinkField 0.5s ease;
     }
   }
 
