--- a/src/components/settings.module.scss
+++ b/src/components/settings.module.scss
@@ -268,6 +268,73 @@
       }
     }
   }
+
+  // outline: none;
+  // border: 1px solid $surface0;
+  // background-color: $mantle;
+  // border-radius: 4px;
+  // padding: 0.5rem;
+  // color: $text;
+  // font-size: 0.85rem;
+  // font-weight: 500;
+  // width: 100%;
+  // box-sizing: border-box;
+  // transition: all 0.1s ease;
+
+  // &::placeholder {
+  //   color: $overlay1;
+  // }
+
+  // &:focus {
+  //   border-color: $text;
+  // }
+
+  // &.blink {
+  //   animation: blinkField 0.5s ease;
+  // }
+
+  .secretText {
+    border: 1px solid $surface0;
+    background-color: $mantle;
+    border-radius: 4px;
+    overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    transition: all 0.1s ease;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    position: relative;
+
+    &:focus-within {
+      border-color: $text;
+    }
+
+    .secretTextInput {
+      padding: 0.5rem;
+      color: $text;
+      font-size: 0.85rem;
+      font-weight: 500;
+      background-color: transparent;
+      border: none;
+      width: 100%;
+    }
+    
+    .eye {
+      position: absolute;
+      right: 0.5rem;
+      color: $overlay1;
+      font-size: 1.25rem;
+      cursor: pointer;
+      transition: all 0.1s ease;
+      display: flex;
+      align-items: center;
+
+      &:hover {
+        color: $text;
+      }
+    }
+  }
 }
 
 .close {
@@ -413,76 +480,3 @@
     }
   }
 }
-
-  // .modalContent {
-  //   background-color: $base;
-  //   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  //   border-radius: 8px;
-  //   width: min(100%, 30rem);
-  //   overflow: hidden;
-  //   box-sizing: border-box;
-  //   animation: modalFadeIn 0.2s ease;
-  
-  //   h1 {
-  //     margin: 1.5rem 1.5rem 1rem 1.5rem;
-  //     color: $text;
-  //     font-size: 1.5rem;
-  //     font-weight: 600;
-  //     border-bottom: 1px solid $surface0;
-  //     padding-bottom: 1rem;
-  //     display: flex;
-  //     align-items: center;
-  //     gap: 0.5rem;
-  //   }
-
-  //   p {
-  //     margin: 0 1.5rem 1rem 1.5rem;
-  //     color: $text;
-  //     font-size: 0.9rem;
-  //     font-weight: 500;
-  //   }
-
-  //   .modalActions {
-  //     padding: 1rem;
-  //     background-color: $mantle;
-  //     display: flex;
-  //     justify-content: flex-end;
-  //     gap: 1rem;
-  //     align-items: center;
-
-  //     .cancel {
-  //       background-color: transparent;
-  //       outline: none;
-  //       border: none;
-  //       color: $text;
-  //       padding: 0.5rem 1rem;
-  //       font-size: 0.85rem;
-  //       font-weight: 500;
-  //       cursor: pointer;
-  //       transition: all 0.1s ease;
-
-  //       &:hover {
-  //         text-decoration: underline;
-  //       }
-  //     }
-
-  //     .confirm {
-  //       background-color: $mauve;
-  //       outline: none;
-  //       border: none;
-  //       border-radius: 4px;
-  //       font-size: 0.85rem;
-  //       font-weight: 600;
-  //       padding: 0.5rem 1rem;
-  //       cursor: pointer;
-  //       transition: all 0.1s ease;
-  //       color: $crust;
-
-  //       &:hover {
-  //         background-color: darken($mauve, 10%);
-  //         color: $mantle;
-  //       }
-  //     }
-  //   }
-  // }
-// }
