--- a/src/components/content.module.scss
+++ b/src/components/content.module.scss
@@ -72,35 +72,79 @@ $scrollbar-color-2: $mantle;
 
   &:nth-child(odd) > div {
     background-color: $base;
+
+    .encrypted {
+      background-color: $base;
+    }
   }
 
   &:nth-child(even) > div {
     background-color: $mantle;
+  
+    .encrypted {
+      background-color: $mantle;
+    }
   }
 
   &:hover > div {
     background-color: transparentize($mauve, 0.85);
   }
 
+  &:nth-child(odd):hover > div .encrypted {
+    background-color: mix($base, $mauve, 85%); // To fix
+  }
+
+  &:nth-child(even):hover > div .encrypted {
+    background-color: mix($mantle, $mauve, 82%); // To fix
+  }
+
   &:nth-child(odd).selected > div {
     background-color: mix($base, $mauve, 30%);
     color: $base;
+
+    svg {
+      color: $base;
+    }
+
+    .encrypted {
+      background-color: mix($base, $mauve, 30%);
+    }
   }
 
   &:nth-child(even).selected > div {
     background-color: mix($mantle, $mauve, 20%);
     color: $mantle;
+
+    svg {
+      color: $mantle;
+    }
+
+    .encrypted {
+      background-color: mix($mantle, $mauve, 20%);
+    }
   }
 }
 
 .icon {
   padding: 0 0.5rem !important;
   height: 100% !important;
+  position: relative;
 
-
-  svg {
+  svg:not(.encrypted) {
     font-size: 2rem;
     height: 100%;
+  }
+
+  .encrypted {
+    position: absolute;
+    bottom: 6px;
+    right: 6px;
+    font-size: 1.1rem;
+    color: $text;
+    padding: 3px 0 0 2px;
+    border-radius: 3px 0 0 0;
+    width: fit-content;
+    transition: background-color 0.15s cubic-bezier(0, 1, 1, 0.95);
   }
 }
 
