--- a/src/components/content.module.scss
+++ b/src/components/content.module.scss
@@ -32,7 +32,7 @@ $scrollbar-color-2: $mantle;
 
 .files {
   display: grid;
-  grid-template-columns: auto 1fr auto auto;
+  grid-template-columns: auto 1fr auto auto auto;
 
   /* Firefox */
   scrollbar-width: $scrollbar-width;
@@ -54,6 +54,22 @@ $scrollbar-color-2: $mantle;
   }
 }
 
+@function blend($color1, $color2, $opacity) {
+  $r1: red($color1);
+  $g1: green($color1);
+  $b1: blue($color1);
+
+  $r2: red($color2);
+  $g2: green($color2);
+  $b2: blue($color2);
+
+  $r: $r1 * (1 - $opacity) + $r2 * $opacity;
+  $g: $g1 * (1 - $opacity) + $g2 * $opacity;
+  $b: $b1 * (1 - $opacity) + $b2 * $opacity;
+
+  @return rgb($r, $g, $b);
+}
+
 .file {
   display: contents;
   cursor: pointer;
@@ -64,6 +80,10 @@ $scrollbar-color-2: $mantle;
     color: $subtext0;
     height: fit-content;
     transition: all 0.15s cubic-bezier(0, 1, 1, 0.95);
+  }
+
+  .date {
+    padding-right: 0;
   }
 
   & > div:last-child {
@@ -88,14 +108,10 @@ $scrollbar-color-2: $mantle;
 
   &:hover > div {
     background-color: transparentize($mauve, 0.85);
-  }
 
-  &:nth-child(odd):hover > div .encrypted {
-    background-color: mix($base, $mauve, 85%); // To fix
-  }
-
-  &:nth-child(even):hover > div .encrypted {
-    background-color: mix($mantle, $mauve, 82%); // To fix
+    .encrypted {
+      background-color: blend($base, $mauve, 0.15);
+    }
   }
 
   &:nth-child(odd).selected > div {
@@ -181,11 +197,12 @@ $scrollbar-color-2: $mantle;
 
 .overlay {
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 800;
   transition: background-color 0.2s;
 
   &.hovering {
