--- a/src/components/settings.module.scss
+++ b/src/components/settings.module.scss
@@ -325,6 +325,49 @@
       }
     }
   }
+
+  .pathPicker {
+    border: 1px solid $surface0;
+    background-color: $mantle;
+    border-radius: 4px;
+    overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    transition: all 0.1s ease;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    .path {
+      padding: 0.5rem;
+      color: $text;
+      font-size: 0.85rem;
+      font-weight: 500;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      flex: 1;
+
+      &::placeholder {
+        color: $overlay1;
+      }
+    }
+
+    .browse {
+      right: 0.5rem;
+      color: $overlay1;
+      font-size: 1.25rem;
+      cursor: pointer;
+      transition: all 0.1s ease;
+      display: flex;
+      align-items: center;
+      margin-right: 0.5rem;
+
+      &:hover {
+        color: $text;
+      }
+    }
+  }
 }
 
 .close {
